fix z-index of layoutaside

--- a/app/frontend/stylesheets/foundation/_variables.scss
+++ b/app/frontend/stylesheets/foundation/_variables.scss
@@ -182,16 +182,17 @@ $CHAR_LOGICAL_OP_OUTLINE: '\E803';
 
   // z-index
   --z-index-base: 10000;
-  --z-index-row-indicator: var(--z-index-base) + 100;
-  --z-index-advanced-search-menu: var(--z-index-base) + 100;
-  --z-index-detail-header: var(--z-index-base) + 100;
-  --z-index-module-tabs-view: var(--z-index-base) + 200;
-  --z-index-global-header: var(--z-index-base) + 200;
-  --z-index-suggest-view: var(--z-index-base) + 200;
-  --z-index-drawer: var(--z-index-base) + 300;
-  --z-index-configuration: var(--z-index-base) + 400;
-  --z-index-editing-condition: var(--z-index-base) + 400;
-  --z-index-activity-indicator: var(--z-index-base) + 500;
+  --z-index-layout-aside: calc(var(--z-index-base) + 100);
+  --z-index-row-indicator: calc(var(--z-index-base) + 100);
+  --z-index-advanced-search-menu: calc(var(--z-index-base) + 100);
+  --z-index-detail-header: calc(var(--z-index-base) + 100);
+  --z-index-module-tabs-view: calc(var(--z-index-base) + 200);
+  --z-index-global-header: calc(var(--z-index-base) + 200);
+  --z-index-suggest-view: calc(var(--z-index-base) + 200);
+  --z-index-drawer: calc(var(--z-index-base) + 300);
+  --z-index-configuration: calc(var(--z-index-base) + 400);
+  --z-index-editing-condition: calc(var(--z-index-base) + 400);
+  --z-index-activity-indicator: calc(var(--z-index-base) + 500);
 
   // charactor
   // FontAwesome
